# G030_T12

./: .gitignore  .mxproject  G030_T12.ioc
Inc/: SEGGER_RTT_Conf.h  adc.h  main.h  oled_driver.h  stm32g0xx_it.h  tim.h
MDK-ARM/: .clangd  G030_T12+G030T12.cprj  G030_T12.uvoptx  G030_T12.uvprojx
MDK-ARM/RTE/_G030T12/: RTE_Components.h
MDK-ARM/RTE/_G030_T12/: RTE_Components.h
MDK-ARM/tmp/G030_T12/G030T12/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
Src/: SEGGER_RTT_printf.c  adc.c  dma.c  gpio.c  main.c  oled_driver.c  spi.c  stm32g0xx_it.c  tim.c
Src/u8g2/: u8g2_d_setup.c
